--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT = 8080
 URL =  mongodb://127.0.0.1:27017/project
 TOKEN = asdsad23425%^&
+EMAIL = subhankarroytest612@gmail.com
+PASS = cnwpihhwfmvqjbjb
