--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 8080
-URL =  mongodb://127.0.0.1:27017/project
+URL =  mongodb+srv://user:user@cluster0.oykf1kf.mongodb.net/myFirstDatabase
 TOKEN = asdsad23425%^&
 EMAIL = subhankarroytest612@gmail.com
 PASS = cnwpihhwfmvqjbjb
